<resources>
    <string name="app_name">Filmer</string>
    <string name="imageposter_is_shown_here">imagePoster is shown here</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_rated_tv_shows">Top Rated Tv Shows</string>
    <string name="most_popular_tv_shows">Most Popular Tv Shows</string>
    <string name="favourite_tv_shows">Favorite Tv Shows</string>
    <string name="favourite_movies">Favorite Movies</string>
    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="trailers">Trailers</string>
    <string name="todo">TODO</string>
    <string name="video_item_layout">Video item layout</string>
    <string name="category">Category</string>
    <string name="movie_list">1. movieone 2.movie2 3. movie3</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="original_title">original title</string>
    <string name="movie_details">Movie Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_movies">Favorite Movies</string>
</resources>